[tool.poetry]
name = "hello-world-api"
version = "0.1.0"
description = ""
authors = ["Pranav Reddy <reddypranav1821@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.135.1"
uvicorn = {extras = ["standard"], version = "^0.41.0"}

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"